# rs-handlegraph

./: .gitignore  Cargo.toml  readme.md
src/: construction.rs  conversion.rs  handle.rs  handlegraph.rs  hashgraph.rs  lib.rs  mutablehandlegraph.rs  pathgraph.rs  pathhandlegraph.rs
src/handlegraph/: iter.rs
src/hashgraph/: graph.rs  node.rs  path.rs
src/pathhandlegraph/: embedded_paths.rs  path.rs  step.rs
tests/: hashgraph.rs
tests/gfa1_files/: lil.gfa
tests/gfa2_files/: data_usize.gfa  example_usize.gfa  graph.gfa  irl.gfa  sample2_usize.gfa  spec_q7.gfa
